// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.
// ------------------------------------------------------------

syntax = "proto3";

package dapr.pkg.proto.placement.v1;

// PlacementService service is used to report Dapr runtime host status.
service PlacementService {
  rpc ReportDaprStatus(stream Host) returns (stream PlacementOrder) {}
}

message PlacementOrder {
  PlacementTables tables = 1;
  string operation = 2;
}

message PlacementTables {
  map<string, PlacementTable> entries = 1;
  string version = 2;
}

message PlacementTable {
  map<uint64, string> hosts = 1;
  repeated uint64 sortedSet = 2;
  map<string, Host> loadMap = 3;
  int64 totalLoad = 4;
}

message Host {
  string name = 1;
  int64 port = 2;
  int64 load = 3;
  repeated string entities = 4;
  string id = 5;
}
